--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "simpletest"]
 	path = simpletest
 	url = https://github.com/kudaba/simpletest.git
+[submodule "context"]
+	path = context
+	url = https://gitlab.uwe.ac.uk/br-gaster/context.git
